# simple-ai-agents

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
examples/: chatbot_session.py  cli.md  fastapi_stream.py  intro_structured.py  llm_judge.py  model_grading_example.csv  multiple_agents.py  multiple_models.py  sessions.py  simple_structured.py  structured_response.py  structured_responses.py  tool_calling.py
simple_ai_agents/: chat_agent.py  chat_session.py  cli.py  demo.py  external.py  models.py  prompts.py  utils.py
tests/: test_chat_agent.py  test_chat_session.py  test_tool_calling.py  test_utils.py
tests/input/: chat_session.csv  chat_session.json
