[tool.poetry]
name = "simple-ai-agents"
version = "0.1.0"
description = ""
authors = ["Timothy Lin <timothy0336@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
python-dotenv = "^1.0.0"
pydantic = "^2.4.0"
openai = "^1.0.0"
litellm = "^1.0.0"
click = "^8.1.7"
instructor = "^0.3.4"

[tool.poetry.group.dev.dependencies]
black = "^23.9.0"
pre-commit = "^2.20.0"
pytest = "^7.4.0"
rich = "^13.6.0"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
