[tool.poetry]
name = "simple-ai-agents"
version = "0.2.1"
description = ""
authors = ["Timothy Lin <timothy0336@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
python-dotenv = "^1.0.0"
pydantic = "^2.4.0"
openai = "^1.1.0"
litellm = "^1.12.0"
click = "^8.1.7"
instructor = "^0.4.2"
python-dateutil = "^2.8.2"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.0"
pre-commit = "^2.20.0"
pytest = "^7.4.0"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aichat = "simple_ai_agents.cli:interactive_chat"
