[tool.poetry]
name = "simple-ai-agents"
version = "0.5.0"
description = "A Python package for creating simple multi-agent workflows using various LLMs. The library extends the capabilities of Simple AI Chat by supporting over 100 LLM providers, structured responses, and multi-agent conversations, enabling easy experimentation, deployment, and orchestration of chatbots."
authors = ["Timothy Lin <timothy0336@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
python-dotenv = "^1.0.0"
pydantic = "^2.4.0"
openai = "^1.45.0"
litellm = "^1.47.0"
click = "^8.1.7"
instructor = "^1.4.1"
python-dateutil = "^2.8.2"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.0"
pre-commit = "^2.20.0"
pytest = "^7.4.0"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.21.1"
fastapi = { extras = ["standard"], version = "^0.114.2" }
uvicorn = "^0.30.6"
opentelemetry-api = "1.25.0"
opentelemetry-sdk = "1.25.0"
opentelemetry-exporter-otlp = "1.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aichat = "simple_ai_agents.cli:interactive_chat"
